--- a/estilo.css
+++ b/estilo.css
@@ -16,6 +16,7 @@ nav{
     background-color: #16344D;
     color: aliceblue;
     height: 80px;
+    width: 100%;
 }
 
 .nav_logo{
@@ -66,7 +67,8 @@ nav{
     margin: 5rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-   column-gap: 10px;
+    column-gap: 10px;
+    flex-wrap: wrap;
 }
 
 .card{
@@ -156,11 +158,19 @@ footer .container{
 }
 /*----------------------------------*/
 /* -- MEDIA QUERYS -- 768px y 480px*/ 
+@media screen and (max-width: 1050px) {
+    .container{
+        grid-template-columns: repeat(2, 1fr);
+        margin: 10% 17%;
+        column-gap: 2rem;
+        row-gap: 5rem;
+    }
+}
 @media screen and (max-width: 768px) {
     /* --- NAV --- */
     nav{
         flex-wrap: wrap;
-        width: 100%;
+        /* width: 100%; */
         height: 95px;
     }
     .nav_logo img{
