--- a/estilo.css
+++ b/estilo.css
@@ -64,11 +64,12 @@ nav{
 /*----------------------------------*/
 /* --- SECTION CARD  --- */
 .container{
-    margin: 5rem;
+    margin: 5rem 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 10px;
     flex-wrap: wrap;
+    margin-left: 5%;
 }
 
 .card{
@@ -128,7 +129,7 @@ footer{
     color: aliceblue;
 }
 
-footer .container{
+footer > .container{
     padding: 2.5rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -161,7 +162,7 @@ footer .container{
 @media screen and (max-width: 1050px) {
     .container{
         grid-template-columns: repeat(2, 1fr);
-        margin: 10% 17%;
+        margin: 10% 13%;
         column-gap: 2rem;
         row-gap: 5rem;
     }
