--- a/estilo.css
+++ b/estilo.css
@@ -171,7 +171,6 @@ footer > .container{
     /* --- NAV --- */
     nav{
         flex-wrap: wrap;
-        /* width: 100%; */
         height: 95px;
     }
     .nav_logo img{
@@ -194,20 +193,17 @@ footer > .container{
     footer{
         height: 12rem;
     }
-    footer .container{
+    footer > .container{
         padding: 2rem;
         grid-template-columns: repeat(1, 1fr);
-        width: 60%;
-        margin-left: 13rem;
+        width: 50%;
+        margin-left: 12rem;
     }
     .iconos_footer{
-        column-gap: 2rem;
+        column-gap: 5rem;
     }
     .text_footer{
-        margin-top: -10%;   
-        display: block;    
-        /* background-color: rgb(255, 127, 182); */
-        margin-left: -5rem;
+        margin-top: -10%;          
     }
     
 }
@@ -216,5 +212,32 @@ footer > .container{
        /* --- SECTION CARDS --- */
     .container{
         margin: 10% 20%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    
+    /* --- SECTION CARDS --- */
+    .container{
+        grid-template-columns: repeat(1, 1fr);
+        margin: 10% 12%;
+        /* row-gap: 4rem; */
+    }
+    /* --- FOOTER --- */
+    footer{
+        height: 12rem;
+    }
+    footer > .container{
+        padding: 2rem;
+        grid-template-columns: repeat(1, 1fr);
+        width: 50%;
+        margin-left: 6rem;
+    }
+    .iconos_footer{
+        column-gap: 2rem;
+    }
+    .text_footer{
+        margin-top: -15%;          
+        margin-right: -2.5rem;
     }
 }
