--- a/estilo.css
+++ b/estilo.css
@@ -197,7 +197,7 @@ footer > .container{
         padding: 2rem;
         grid-template-columns: repeat(1, 1fr);
         width: 50%;
-        margin-left: 9.5rem;
+        margin-left: 2.2rem;
     }
     .iconos_footer{
         column-gap: 5rem;
@@ -205,7 +205,6 @@ footer > .container{
     .text_footer{
         margin-top: -10%;          
     }
-    
 }
 
 @media screen and (max-width: 615px) {
@@ -216,6 +215,18 @@ footer > .container{
 }
 
 @media screen and (max-width: 480px) {
+    /*NAV*/
+    .nav_logo img{
+        width: 50px;
+        margin-left: 1px;
+    }
+    .nav_logo h1{
+        font-size: 1.5rem;
+    }
+    .nav_menu .nav_item{
+        font-size: 1rem;
+        transition: .5s;
+    }
     
     /* --- SECTION CARDS --- */
     .container{
@@ -225,19 +236,19 @@ footer > .container{
     }
     /* --- FOOTER --- */
     footer{
-        height: 12rem;
+        height: 10rem;
     }
     footer > .container{
         padding: 2rem;
         grid-template-columns: repeat(1, 1fr);
-        width: 50%;
-        margin-left: 6rem;
+        width: 80%;
+       
     }
     .iconos_footer{
-        column-gap: 2rem;
+        column-gap: 1.5rem;
     }
     .text_footer{
         margin-top: -15%;          
-        margin-right: -2.5rem;
+        margin-left: -1.5rem;
     }
 }
